--- a/css/main.css
+++ b/css/main.css
@@ -3,14 +3,10 @@
 }
 
 #container {
+    width: 256px;
     margin: 0 auto;
-    width: 770px;
-    align-content: center;
-    vertical-align: middle;
     text-align: center;
-    border: 1px dotted black;
     box-shadow: 0px 0px 5px white;
-    border-radius: 2px;
 }
 
     #container pre {
@@ -19,19 +15,16 @@
         text-align: left;
         overflow: auto;
         display: block;
-        word-wrap:break-word;
+        word-wrap: break-word;
     }
 
-    #container > div,#container > div img {
-        float: left;
+    #container > div, #container > div img {
         height: 384px;
         width: 256px;
     }
 
 #controlpad {
     width: 240px;
-    border-left: 1px dotted black;
-    border-right: 1px dotted black;
     background: linear-gradient(to top,#000,#fff);
 }
 
@@ -39,28 +32,44 @@
     width: 100%;
 }
 
+    #chat input, #chat button {
+        border-bottom: 1px double #eeeeee;
+        outline: none;
+        background: white;
+        line-height: 20px;
+        padding: 0;
+        text-shadow:1px 1px 1px gray;
+    }
+
     #chat input {
-        width: 100%;
         height: 20px;
-        margin-top: 5px;
+        width: 190px;
         border-top-left-radius: 10px;
+        padding-left: 10px;
+    }
+
+    #chat button {
+        height: 21px;
+        width: 56px;
         border-top-right-radius: 10px;
-        text-indent: 10px;
-        border-bottom: 1px dotted silver;
+        cursor: pointer;
     }
 
-    #chat pre {
-        height: 162px;
-        background: linear-gradient(to top,#000,#fff);
-    }
+        #chat button:hover {
+            background: #eeeeee;
+        }
 
-#keyrecord {
-    height: 100px;
-    border-bottom: 1px dotted gray;
-    margin-bottom: 5px;
+        #chat input:hover {
+            background: #eeeeee;
+        }
+
+#chatrecord {
+    height: 163px;
+    background: linear-gradient(to top,#000,#fff);
 }
 
 #keypad {
+    padding: 5px 0 5px 0;
     width: 100%;
 }
 
@@ -80,8 +89,18 @@
         border-radius: 15px;
         background: linear-gradient(to top right,#000,#ddd);
         color: white;
+        outline: none;
+        text-shadow:1px 1px 1px black;
     }
+
         #keypad button:hover {
-        border:1px solid black;
-        background: linear-gradient(to top right,black,#888);
+            border: 1px solid black;
+            background: linear-gradient(to top right,black,#888);
         }
+
+
+#keyrecord {
+    height: 100px;
+    background: black;
+    color: silver;
+}
